--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:height="45dp"
-        android:hint="username"
+        android:hint="Username"
         android:inputType="text"
         android:minHeight="48dp" />
 
@@ -30,7 +30,7 @@
         android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="password"
+        android:hint="Password"
         android:inputType="textPassword"
         android:minHeight="48dp" />
 
