--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,18 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="xxxxxxxxxx"
+        android:textStyle="bold"
         android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="32dp"
+        android:gravity="center_horizontal"
+        android:text="YYYYYYYYYYYYY"
+        android:textSize="21sp"/>
 
     <Button
         android:id="@+id/btn_logout"
